--- a/PROGETTO_ACROBOT/trying_code.ipynb
+++ b/PROGETTO_ACROBOT/trying_code.ipynb
@@ -2,14 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "-----thresh_kd:  14.221408186256102\n",
+      "-----thresh_kd:  122.4074218576685\n",
       "-----thresh_kp:  61.140962938182525\n"
      ]
     }
@@ -43,7 +43,7 @@
     "beta2 = m2*lc2*g\n",
     "\n",
     "\n",
-    "M = np.matrix([[alpha1+alpha2+2*alpha3*np.cos(q[0]), alpha2+alpha3*np.cos(q[1])],\n",
+    "M = np.matrix([[alpha1+alpha2+2*alpha3*np.cos(q[1]), alpha2+alpha3*np.cos(q[1])],\n",
     "                [alpha2+alpha3*np.cos(q[1]), alpha2]])\n",
     "C = alpha3*np.array([-2*qdot[0]*qdot[1] - qdot[1]**2, qdot[0]**2])*np.sin(q[1])\n",
     "#C = np.multiply(np.multiply(alpha3,np.array([-2*qdot[0]*qdot[1] - qdot[1]**2, qdot[0]**2])),np.sin(q[1]))\n",
@@ -62,14 +62,32 @@
     "\n",
     "# Define the function\n",
     "def max_f_kd(q2):\n",
-    "    phi = np.sqrt(beta1**2+beta2**2+2*beta1*beta2*np.cos(q2))\n",
-    "    return ((phi + desired_energy)*M_det)/(M[0,0]) \n",
+    "    phi2 = np.sqrt(beta1**2+beta2**2+2*beta1*beta2*np.cos(q2))\n",
+    "    return ((phi2 + desired_energy)*(alpha1*alpha2 - (alpha3**2)*(np.cos(q2**2))))/(alpha1+alpha2+2*alpha3*np.cos(q2)) \n",
     "\n",
     "q2_values = np.linspace(0, 2*(np.pi), 360)\n",
     "\n",
     "thresh_kd_vec = max_f_kd(q2_values)\n",
     "thresh_kd = max( thresh_kd_vec)\n",
     "print('-----thresh_kd: ', thresh_kd)\n",
+    "\n",
+    "\n",
+    "# from scipy.optimize import minimize_scalar\n",
+    "\n",
+    "# # Define your function to maximize\n",
+    "# def f(q2):\n",
+    "#     phi2 = np.sqrt(beta1**2+beta2**2+2*beta1*beta2*np.cos(q2))\n",
+    "#     return -(phi2 + desired_energy)*(alpha1*alpha2 - (alpha3**2)*(np.cos(q2**2)))/(alpha1+alpha2+2*alpha3*np.cos(q2))   # Negate the function to maximize\n",
+    "\n",
+    "# # Use minimize_scalar function to find the maximum\n",
+    "# result = minimize_scalar(f, bounds=(0, 2*np.pi), method='bounded')\n",
+    "\n",
+    "# # Retrieve the maximum value and the corresponding x\n",
+    "# max_value = -result.fun\n",
+    "# argmax = result.x\n",
+    "\n",
+    "# print(\"Maximum value:\", max_value)\n",
+    "# print(\"Argmax:\", argmax)\n",
     "\n",
     "thresh_kp = (2/np.pi)*min(beta1**2, beta2**2)\n",
     "print('-----thresh_kp: ', thresh_kp)"
