out of control, for now

--- a/PROGETTO_ACROBOT/trying_code.ipynb
+++ b/PROGETTO_ACROBOT/trying_code.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -183,21 +183,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "196"
-      ]
-     },
-     "execution_count": 32,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1 2 5 8]\n"
+     ]
     }
    ],
-   "source": []
+   "source": [
+    "n = np.array([1, 2])\n",
+    "m = np.array([5, 8])\n",
+    "t = np.concatenate((n,m))\n",
+    "\n",
+    "print(t)"
+   ]
   },
   {
    "cell_type": "code",
