--- a/PROGETTO_ACROBOT/trying_code.ipynb
+++ b/PROGETTO_ACROBOT/trying_code.ipynb
@@ -183,21 +183,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[1 2 5 8]\n"
+      "[4 6]\n"
      ]
     }
    ],
    "source": [
     "n = np.array([1, 2])\n",
     "m = np.array([5, 8])\n",
-    "t = np.concatenate((n,m))\n",
+    "t = m - n\n",
+    "#t = np.concatenate((n,m))\n",
     "\n",
     "print(t)"
    ]
