trying with our integration

--- a/PROGETTO_ACROBOT/trying_code.ipynb
+++ b/PROGETTO_ACROBOT/trying_code.ipynb
@@ -205,6 +205,44 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.5707963267948966\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(np.pi/2 % (2 * np.pi) )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.         0.00046296 0.00092593 0.00138889 0.00185185 0.00231481\n",
+      " 0.00277778 0.00324074 0.0037037  0.00416667]\n",
+      "0.004166666666666667\n"
+     ]
+    }
+   ],
+   "source": [
+    "t = np.linspace(0, 1/240, 10)\n",
+    "print(t)\n",
+    "print(1/240)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
