correct some stuff. Still wrong

--- a/PROGETTO_ACROBOT/trying_code.ipynb
+++ b/PROGETTO_ACROBOT/trying_code.ipynb
@@ -183,22 +183,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[4 6]\n"
+      "[[0 0]]\n"
      ]
     }
    ],
    "source": [
-    "n = np.array([1, 2])\n",
-    "m = np.array([5, 8])\n",
-    "t = m - n\n",
+    "import numpy as np\n",
+    "n = np.array([0,0])\n",
+    "t = np.array([n])\n",
+    "#m = np.array([5, 8])\n",
+    "#t = m - n\n",
     "#t = np.concatenate((n,m))\n",
+    "for i in range(10):\n",
+    "    m = np.array([i+1, i+11])\n",
+    "    t = np.append(t, [m], axis=0)\n",
     "\n",
     "print(t)"
    ]
